--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "braintree": "^3.22.0",
     "cloudinary": "^1.41.2",
     "colors": "^1.4.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-validator": "^7.0.1",
